<resources>
    <string name="a_cache">a-cache</string>
    <string name="a_codec">a-codec</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app">关于</string>
    <string name="action_Select">Select</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="add">添加</string>
    <string name="advanced_settings">高级设置</string>
    <string name="after_parking_video_length">停车后录像时长</string>
    <string name="agree_with">我同意</string>
    <string name="all_select">全选</string>
    <string name="allow_to_save_traffic_data">允许保存行车数据</string>
    <string name="appName">Cervexa V2</string>
    <string name="app_advanced_settings">APP高级设置</string>
    <string name="app_name">libusbcamera</string>
    <string name="app_storage_manager">APP存储管理</string>
    <string name="app_version">App版本</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_decoder">a_dec</string>
    <string name="audio_sample_rate">a_rate</string>
    <string name="auto_download_the_photo_files">自动下载拍照文件</string>
    <string name="auto_play">无操作10秒后自动播放选中视频</string>
    <string name="back">BACK</string>
    <string name="back_to_search">搜索STA设备</string>
    <string name="bit_rate">bit_rate</string>
    <string name="boot_prompt">开机音效</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="camera">CAMERA</string>
    <string name="camera_model">摄像模式</string>
    <string name="camera_not_connected">The camera is not connected!</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_all_select">取消全选</string>
    <string name="capture_successfully">Capture successfully!</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_app_upgrade">检查升级</string>
    <string name="chip_text">Chip text</string>
    <string name="clean_cache">清理缓存</string>
    <string name="clean_cache_content">您确定要清除缓存?</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="collision_induction_sensitivity">碰撞感应灵敏度</string>
    <string name="color_picker_cancel">Cancel</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="color_picker_select">Select</string>
    <string name="color_swatch_description">Color %1$d</string>
    <string name="color_swatch_description_selected">Color %1$d selected</string>
    <string name="comfirm">确定</string>
    <string name="company">ZH-JL</string>
    <string name="connect_device_in_wlan">连接失败！请到手机设置中连接设备</string>
    <string name="connected_wifi_tip">连接Wifi[%1$s]成功</string>
    <string name="connecting">正在连接</string>
    <string name="connection_failed">连接失败</string>
    <string name="connection_timeout">连接超时，请确认网络环境并重新连接</string>
    <string name="counter_format">%1$d / %2$d</string>
    <string name="create_dir_success">创建文件夹成功</string>
    <string name="create_file_failed">创建输出文件失败</string>
    <string name="curr_dev_not_support">当前设备不支持</string>
    <string name="current_path_is_root">当前是根目录</string>
    <string name="current_version">当前版本：%1$s</string>
    <string name="cyc_save_video_failed">循环保存失败</string>
    <string name="default_time_format">00:00</string>
    <string name="delete_all_files">删除全部</string>
    <string name="delete_dir_failed">删除文件夹失败</string>
    <string name="delete_dir_success">删除文件夹成功</string>
    <string name="delete_dir_tip">确定删除文件夹[%1$s]？</string>
    <string name="delete_emergency_video_tip">是否删除紧急视频？</string>
    <string name="deleting_tip">删除文件中，请等待</string>
    <string name="dev_gallery">设备图库</string>
    <string name="dev_refused_access">设备拒绝连接</string>
    <string name="device_connected_hot_spot">确保设备和手机已连接相同网络</string>
    <string name="device_diaconnected">设备连接已断开</string>
    <string name="device_media">设备文件</string>
    <string name="device_name">记录仪名称</string>
    <string name="device_name_input_limit">名字必须为1-%1$d个非空字符,中文占2-3个字符,当前字符数：%2$d</string>
    <string name="device_name_length_error">wifi名字过长</string>
    <string name="device_no_media_files">设备没有媒体文件</string>
    <string name="device_no_videos">设备没有视频文件</string>
    <string name="device_password">记录仪密码</string>
    <string name="device_setting">记录仪设置</string>
    <string name="device_storage_manage">记录仪储存管理</string>
    <string name="device_volume_value">记录仪音量(%1$d)</string>
    <string name="device_wifi_pwd">Wifi密码</string>
    <string name="device_wifi_ssid">设备Wifi名</string>
    <string name="dialod_wait">Please later</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_dont_show_again">"Don't show again."</string>
    <string name="dialog_exit">退出</string>
    <string name="dialog_no">否</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_reconnection_chose">是否重新连接设备</string>
    <string name="dialog_return">返回</string>
    <string name="dialog_tips">提示</string>
    <string name="dialog_warning">警告</string>
    <string name="dialog_yes">是</string>
    <string name="double_tap_to_exit">再按一次返回键退出</string>
    <string name="download_file">下载文件</string>
    <string name="downloading_tip">下载文件中，请等待</string>
    <string name="drop_packet_count">drop_count</string>
    <string name="drop_packet_sum">drop_sum</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">"DUMMY
CONTENT"</string>
    <string name="end_crash_video_task">碰撞检测视频保存成功，路径：%1$s</string>
    <string name="enter_sta_wifi_msg_tip">请输入需要连接的网络信息</string>
    <string name="error_crash_video_task">碰撞检测视频保存失败，原因: %1$s</string>
    <string name="error_icon_content_description">Error</string>
    <string name="executing_step">正在执行：%1$s</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="factory_reset">恢复出厂设置</string>
    <string name="factory_reset_tips">确定恢复出厂设置？</string>
    <string name="fail_to_play">播放失败</string>
    <string name="failure_photo">拍照失败</string>
    <string name="fast_backward">快退</string>
    <string name="fast_forward">快进</string>
    <string name="fenbianlv">RESOLUTION</string>
    <string name="firmware_upgrade_tip">固件版本有更新</string>
    <string name="firmware_version">固件版本</string>
    <string name="format">格式化</string>
    <string name="format_failed">格式化失败</string>
    <string name="format_follow_language">自动跟随语言</string>
    <string name="format_successed">格式化成功</string>
    <string name="fps">fps</string>
    <string name="front_camera">前摄像头</string>
    <string name="front_view">前视</string>
    <string name="full_screeen_mode">全屏模式(16:9)</string>
    <string name="generate_qr_code">生成二维码</string>
    <string name="go_to_wifi_settings">先进入-手机设置-WLAN并连接设备</string>
    <string name="go_to_wlan">点击去连接设备</string>
    <string name="grant">授予</string>
    <string name="haveto_switch">Have to switch to</string>
    <string name="helcenter">HELP CENTER</string>
    <string name="help">帮助</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hig">高</string>
    <string name="hour">%1$s小时</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="ijkplayer_dummy" />
    <string name="immediate_effect">是否立即生效，是则会重启设备，否则重启设备后生效</string>
    <string name="init_mov_error">启动MOV封装器失败</string>
    <string name="input_content_empty">输入内容不能为空</string>
    <string name="input_content_tip">请输入内容</string>
    <string name="input_new_dir_name">请输入文件夹名称</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_pld_pws_error">旧密码不正确,设置失败</string>
    <string name="input_pwd_error">密码格式错误</string>
    <string name="item_Language0">Default</string>
    <string name="item_Language1">English</string>
    <string name="item_Language2">繁體中文</string>
    <string name="item_Language3">简体中文</string>
    <string name="item_view_role_description">Tab</string>
    <string name="language">语言</string>
    <string name="language1">Settings</string>
    <string name="language10">Cancel</string>
    <string name="language11">help</string>
    <string name="language12">1920*1080</string>
    <string name="language13">1280*720</string>
    <string name="language14">640*480</string>
    <string name="language15">Resolution</string>
    <string name="language16">SD card is not available</string>
    <string name="language17">Save successful</string>
    <string name="language18">Save failed</string>
    <string name="language2">Image contrast mode</string>
    <string name="nearby_device">附近记录仪</string>
    <string name="open">打开</string>
    <string name="password">密码</string>
    <string name="photo_quality">拍照分辨率</string>
    <string name="photo_qulity_hi">高清</string>
    <string name="photo_qulity_lo">流畅</string>
    <string name="photo_qulity_md">标清</string>
    <string name="photo_qulity_value">图象质量:%1$s(%2$dP)</string>
    <string name="recorded_time">大约可录制:(%1$s)</string>
    <string name="save_station_msg">保存以上信息到设备端</string>
    <string name="submit">提交</string>
    <string name="switch_sta_mode">切换到STA模式</string>
    <string name="tab_device">设备</string>
    <string name="time_chose_tip">选择时长，当停车达到该时长后自动关机，从而保护车辆电池</string>
    <string name="toolbar_done">Done</string>
    <string name="wifi">Wi-Fi</string>
</resources>