<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@mipmap/ic_content_copy_white_48dp" android:id="@id/action_copy" android:orderInCategory="70" android:title="@string/action_copy" app:showAsAction="ifRoom" />
    <item android:icon="@mipmap/ic_delete_forever_white_48dp" android:id="@id/action_delete" android:orderInCategory="80" android:title="@string/action_delete" app:showAsAction="ifRoom" />
    <item android:icon="@mipmap/ic_done_all_white_48dp" android:id="@id/action_Select" android:orderInCategory="90" android:title="@string/action_Select" app:showAsAction="ifRoom" />
    <item android:id="@id/action_done" android:orderInCategory="100" android:title="@string/toolbar_done" app:showAsAction="ifRoom" />
</menu>
