<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/add_dev_top_layout" android:background="@mipmap/bg_top_bar" android:layout_width="fill_parent" android:layout_height="@dimen/top_bar_height">
        <Button android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/device_setting_return_btn" android:background="@color/background_transparent" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:onClick="returnBtnClick" android:drawableStart="@drawable/ic_return_press" android:layout_marginStart="10.0dip" android:layout_alignParentStart="true" />
        <TextView android:textSize="@dimen/text_normal_inc" android:textColor="@color/text_white" android:id="@id/device_setting_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/photo_quality" android:layout_centerInParent="true" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/text_small" android:textColor="@color/text_black" android:id="@id/photo_qulity_value" android:background="@color/background_transparent" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/photo_qulity_value" />
    <TextView android:textSize="@dimen/text_smaller_x" android:textColor="@color/text_gray" android:id="@id/recording_time" android:background="@color/background_transparent" android:paddingLeft="10.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/recorded_time" />
    <RadioGroup android:orientation="vertical" android:id="@id/photo_qulity_radio_group" android:background="@color/background_transparent" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_black" android:id="@id/lo_rbtn" android:background="@color/bg_white" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:button="@null" android:text="@string/photo_qulity_lo" android:drawableEnd="@drawable/bg_picture_qulity" />
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_black" android:id="@id/md_rbtn" android:background="@color/bg_white" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:button="@null" android:text="@string/photo_qulity_md" android:drawableEnd="@drawable/bg_picture_qulity" />
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_black" android:id="@id/hd_rbtn" android:background="@color/bg_white" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:button="@null" android:text="@string/photo_qulity_hi" android:drawableEnd="@drawable/bg_picture_qulity" />
    </RadioGroup>
</LinearLayout>
