<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/text_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/switch_sta_top_layout" android:background="@mipmap/bg_top_bar" android:layout_width="fill_parent" android:layout_height="@dimen/top_bar_height">
        <Button android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/switch_sta_return_btn" android:background="@color/background_transparent" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:onClick="returnBtnClick" android:drawableStart="@drawable/ic_return_press" android:layout_marginStart="10.0dip" android:layout_alignParentStart="true" />
        <TextView android:textSize="@dimen/text_normal_inc" android:textColor="@color/text_white" android:id="@id/device_setting_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/switch_sta_mode" android:layout_centerInParent="true" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/text_small" android:id="@id/wifi_msg_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/enter_sta_wifi_msg_tip" android:layout_below="@id/switch_sta_top_layout" />
    <RelativeLayout android:id="@id/wifi_msg_ssid_layout" android:background="@drawable/dbg_edit_shape" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_below="@id/wifi_msg_tip">
        <EditText android:id="@id/edit_wifi_ssid" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/wifi" android:inputType="text" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/wifi_msg_pwd_layout" android:background="@drawable/dbg_edit_shape" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_below="@id/wifi_msg_ssid_layout">
        <ImageView android:id="@id/show_or_hide_pwd" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_hide_pwd" android:layout_centerVertical="true" android:contentDescription="@null" android:layout_marginStart="10.0dip" android:layout_alignParentEnd="true" />
        <EditText android:id="@id/edit_wifi_pwd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password" android:maxLines="63" android:inputType="textPassword" android:layout_toStartOf="@id/show_or_hide_pwd" />
    </RelativeLayout>
    <CheckBox android:textSize="@dimen/text_smaller_x" android:textColor="@color/text_black" android:id="@id/save_sta_msg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:checked="true" android:text="@string/save_station_msg" android:layout_below="@id/wifi_msg_pwd_layout" android:layout_marginStart="20.0dip" />
    <Button android:textColor="@color/text_white" android:id="@id/switch_sta_btn" android:background="@drawable/drawable_btn_bg" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="@string/submit" android:layout_below="@id/save_sta_msg" android:layout_centerHorizontal="true" />
</RelativeLayout>
