<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/button_bg_press" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/device_list_top_bar" android:background="@mipmap/bg_top_bar" android:layout_width="fill_parent" android:layout_height="@dimen/top_bar_height">
        <TextView android:textSize="@dimen/text_normal_inc" android:textColor="@color/text_white" android:id="@id/device_list_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/tab_device" android:layout_centerInParent="true" />
        <ImageView android:id="@id/device_list_switch_search_mode" android:padding="5.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/drawable_sta_search_mode" android:layout_centerVertical="true" android:contentDescription="@string/company" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/go_to_wifi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/go_to_wlan" android:drawableTop="@mipmap/ic_connect_device" android:drawablePadding="10.0dip" />
</FrameLayout>
