<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/add_dev_top_layout" android:background="@mipmap/bg_top_bar" android:layout_width="fill_parent" android:layout_height="@dimen/top_bar_height">
        <Button android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/device_setting_return_btn" android:background="@color/background_transparent" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:drawableLeft="@drawable/ic_return_press" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:onClick="returnBtnClick" />
        <TextView android:textSize="@dimen/text_normal_inc" android:textColor="@color/text_white" android:id="@id/device_setting_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/advanced_settings" android:layout_centerInParent="true" />
    </RelativeLayout>
    <ListView android:id="@id/device_advanced_setting_list_view" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@color/text_transparent" />
    <RelativeLayout android:background="@color/bg_white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-10.0dip">
        <TextView android:textSize="@dimen/text_small" android:textColor="@color/text_black" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/collision_induction_sensitivity" />
        <TextView android:textSize="@dimen/text_small" android:textColor="@color/text_black" android:gravity="center" android:id="@id/senor_tv" android:padding="10.0dip" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/open" android:drawableRight="@mipmap/ic_down" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" />
        <View android:background="@color/bg_gray" android:layout_width="1.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_toLeftOf="@id/senor_tv" android:layout_alignTop="@id/senor_tv" android:layout_alignBottom="@id/senor_tv" android:layout_toStartOf="@id/senor_tv" />
    </RelativeLayout>
    <RelativeLayout android:background="@color/bg_white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_marginTop">
        <TextView android:textSize="@dimen/text_small" android:textColor="@color/text_black" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/after_parking_video_length" />
        <TextView android:textSize="@dimen/text_small" android:textColor="@color/text_black" android:gravity="center" android:id="@id/hour_tv" android:padding="10.0dip" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/hour" android:drawableRight="@mipmap/ic_down" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" />
        <View android:background="@color/bg_gray" android:layout_width="1.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_toLeftOf="@id/hour_tv" android:layout_alignTop="@id/hour_tv" android:layout_alignBottom="@id/hour_tv" android:layout_toStartOf="@id/hour_tv" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/text_small" android:textColor="@color/text_gray" android:background="@color/bg_white" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/time_chose_tip" />
</LinearLayout>
